# screenpipe

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md
.claude/skills/screenpipe-api/: SKILL.md
.claude/skills/screenpipe-cli/: SKILL.md
.github/workflows/: ci.yml  e2e-test.yml  eval-diarization.yml  eval-meeting-detection.yml  ort-init-smoke.yml  release-app.yml  release-cli.yml  release-enterprise.yml  release-mcp.yml  windows-integration-test.yml
apps/screenpipe-app-tauri/: .gitignore  package.json  vitest.config.ts
apps/screenpipe-app-tauri/app/: layout.tsx
apps/screenpipe-app-tauri/components/: announcement-host.tsx  app-entitlement-gate.test.tsx  app-entitlement-gate.tsx  app-sidebar.tsx  chat-sidebar.tsx  file-viewer-html-frame.tsx  file-viewer.tsx  header.tsx  notification-bell.tsx  pipe-store.tsx  recording-status.tsx  share-logs-button.tsx  (+2 more)
crates/screenpipe-a11y/: Cargo.toml
crates/screenpipe-audio/: Cargo.toml
crates/screenpipe-db/: Cargo.toml
crates/screenpipe-db/src/: db.rs  failpoint_vfs.rs  lib.rs  sqlite_error.rs  types.rs  write_queue.rs
crates/screenpipe-db/src/db/: accessibility.rs  audio.rs  elements.rs  frames.rs  maintenance.rs  meetings.rs  memories.rs  mod.rs  outputs.rs  search.rs  setup.rs  speakers.rs  tags.rs  tests.rs  text_positions.rs  truncation_tests.rs  write_ops.rs
crates/screenpipe-db/tests/: db.rs  live_coverage_marker_test.rs  multi_pool_wal_parity_test.rs  search_ocr_snapshot_test.rs  tag_autocomplete_query_test.rs  tag_filter_bench.rs  timeline_live_meeting_test.rs
crates/screenpipe-engine/: Cargo.toml  build.rs
crates/screenpipe-redact/: Cargo.toml
crates/screenpipe-screen/: Cargo.toml
crates/screenpipe-secrets/: Cargo.toml
docs/: SPEAKER_CLEANUP_SPEC.md  TIMELINE_VIDEO_SPEC.md
docs/mcp-registry/: mockups.html
ee/desktop-rust/: enterprise_upload.rs
ee/sdk/: Cargo.toml  package.json
ee/sdk/tauri/rust/: Cargo.toml
ee/sdk/tauri/rust/src/: lib.rs
scripts/dev-vm/: README.md
(+348 files in other folders)
