[package]
name = "screenpipe-db"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
image = { workspace = true }
sqlx = { workspace = true, features = [
  "chrono",
  "migrate",
] }
sqlite-vec = "0.1.3"
libsqlite3-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true, features = ["std"] }

screenpipe-config = { path = "../screenpipe-config" }
zerocopy = { version = "0.7.32" }

tokio = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }
oasgen = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
screenpipe-core = { path = "../screenpipe-core" }
screenpipe-secrets = { path = "../screenpipe-secrets" }
tempfile = { workspace = true }

[[bench]]
name = "db_benchmarks"
harness = false

[[bench]]
name = "new_db_benchmark"
harness = false
