[package]
name = "screenpipe-tauri"
version = "0.3.0"
edition = "2021"
description = "Native Tauri v2 plugin for the screenpipe SDK — in-process recorder, no Node bridge"
license = "LicenseRef-Screenpipe-Enterprise"
publish = false

[dependencies]
# The pure-Rust recorder orchestration. Calling it in-process is what
# lets this plugin avoid spawning a Node helper at runtime.
screenpipe-recorder = { path = "../../recorder-core" }

base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tempfile = "3"
